--- a/package.json
+++ b/package.json
@@ -25,7 +25,12 @@
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "css-loader": "^0.26.1",
+    "foundation-sites": "^6.3.0-rc1",
+    "jquery": "^3.1.1",
     "nodemon": "^1.11.0",
+    "script-loader": "^0.7.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
   }
 }
