--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "css-loader": "^0.26.1",
     "foundation-sites": "^6.3.0-rc1",
     "jquery": "^3.1.1",
+    "node-sass": "^3.13.0",
     "nodemon": "^1.11.0",
+    "sass-loader": "^4.0.2",
     "script-loader": "^0.7.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3"
